<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:id="@+id/sfondo_bg"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_et"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:text="@string/login"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn"
            android:text="@string/register"
            />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:checked="false"
        android:id="@+id/switch_btm">

    </Switch>

    </LinearLayout>

</LinearLayout>

</LinearLayout>